// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not show 1`] = `
.c0 {
  display: none;
  margin-bottom: 16px;
}

.c0 input {
  margin-right: 8px;
  padding: 2px 4px;
  border: 1px solid #c0c0c0;
}

.c0 button {
  height: 25px;
  border: 1px solid #c0c0c0;
  border-radius: 2px;
  background: none;
  cursor: pointer;
}

.c0 button:hover {
  border: 1px solid #82c91e;
  background: #82c91e;
  color: white;
}

<SubmitScore
  shouldShow={false}
>
  <styled.div
    shouldShow={false}
  >
    <StyledComponent
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: ",
              [Function],
              ";
  margin-bottom: 16px;

  input {
    margin-right: 8px;
    padding: 2px 4px;
    border: 1px solid #c0c0c0;
  }

  button {
    height: 25px;
    border: 1px solid #c0c0c0;
    border-radius: 2px;
    background: none;
    cursor: pointer;

    &:hover {
      border: 1px solid #82c91e;
      background: #82c91e;
      color: white;
    }
  }
",
            ],
          },
          "displayName": "styled.div",
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      shouldShow={false}
    >
      <div
        className="c0"
      >
        <input
          name="username"
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="username"
          type="text"
        />
        <button
          onClick={[Function]}
        >
          Submit
        </button>
      </div>
    </StyledComponent>
  </styled.div>
</SubmitScore>
`;

exports[`shows 1`] = `
.c0 {
  display: block;
  margin-bottom: 16px;
}

.c0 input {
  margin-right: 8px;
  padding: 2px 4px;
  border: 1px solid #c0c0c0;
}

.c0 button {
  height: 25px;
  border: 1px solid #c0c0c0;
  border-radius: 2px;
  background: none;
  cursor: pointer;
}

.c0 button:hover {
  border: 1px solid #82c91e;
  background: #82c91e;
  color: white;
}

<SubmitScore
  shouldShow={true}
>
  <styled.div
    shouldShow={true}
  >
    <StyledComponent
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: ",
              [Function],
              ";
  margin-bottom: 16px;

  input {
    margin-right: 8px;
    padding: 2px 4px;
    border: 1px solid #c0c0c0;
  }

  button {
    height: 25px;
    border: 1px solid #c0c0c0;
    border-radius: 2px;
    background: none;
    cursor: pointer;

    &:hover {
      border: 1px solid #82c91e;
      background: #82c91e;
      color: white;
    }
  }
",
            ],
          },
          "displayName": "styled.div",
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      shouldShow={true}
    >
      <div
        className="c0"
      >
        <input
          name="username"
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="username"
          type="text"
        />
        <button
          onClick={[Function]}
        >
          Submit
        </button>
      </div>
    </StyledComponent>
  </styled.div>
</SubmitScore>
`;
